# EasyInfoDrop

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci-cd.yml
config/: config.json
src/: main.cpp
